corrected spacing aroung each section

--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ option {
 
 #about-us {
   background-color: #f8f8f8;
+  padding: 128px 0;
 }
 
 #about-us-container {
@@ -219,17 +220,14 @@ option {
   justify-content: center;
 }
 
-#about-us-description h4 {
-  color: #c5a880;
-  line-height: 23.4px;
-  margin-bottom: 5px;
-}
 
 .sub-header {
   color: #c5a880;
   line-height: 23.4px;
   margin-bottom: 5px;
   font-weight: 600;
+  font-size: 0.8rem;
+  letter-spacing: 2px;
 }
 
 .header {
@@ -237,6 +235,7 @@ option {
   font-family: "Old Standard TT", serif;
   font-weight: 500;
   font-style: normal;
+  line height: 89.6px;
 }
 
 #about-us-description p {
@@ -256,27 +255,55 @@ option {
 }
 
 #services {
-  padding: 100px 100px;
+  padding: 128px 0;
   background-color: #f8f8f8;
+}
+
+#services-cointainer {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.headings {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  padding-bottom: 76px;
 }
 
-.services-cointainer {
-  width: 80%;
+.icon-cards {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
 }
 
 .icon-card {
-  background-color: red;
-  height: 183px;
-  width: 220px;
+  background-color: white;
+  height: 184px;
+  width: 196px;
   border-radius: 50% 50% 50% 0;
   box-shadow: 0px 5px 25px -2px rgba(0, 0, 0, 0.06);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+  margin: 0 12px;
+
+}
+
+.icon-card h2 {
+  font-size: 20px;
+  line-height: 28.8px;
+font-weight: 600;
+}
+
+.icon-card img {
+ padding: 0;
+
 }
